--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="featured_slide">
     <div id="featured_content">
       <ul>
-        <li><img src="images/demo/1.gif" alt="" />
+        <li><img src="images/demo/1.GIF" alt="" />
           <div class="floater">
             <h2>About This Template !</h2>
             <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a>, which allows you to use and modify the template for both personal and commercial use when you keep the provided credit links in the footer. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>.</p>
             <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
           </div>
         </li>
-        <li><img src="images/demo/2.gif" alt="" />
+        <li><img src="images/demo/2.GIF" alt="" />
           <div class="floater">
             <h2>Cursus penati saccum ut curabitur nulla.</h2>
             <p>Temperinte interdum sempus odio urna eget curabitur semper convallis nunc laoreet. Nullain convallis ris elis vest liberos nis diculis feugiat in rutrum. Suspendreristibulumfaucibulum lobortor quis tortortor ris sapien sce enim et volutpat sus. Urnaretiumorci orci fauctor leo justo nulla cras ridiculum&hellip;</p>
             <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
           </div>
         </li>
-        <li><img src="images/demo/3.gif" alt="" />
+        <li><img src="images/demo/3.GIF" alt="" />
           <div class="floater">
             <h2>Cursus penati saccum ut curabitur nulla.</h2>
             <p>Temperinte interdum sempus odio urna eget curabitur semper convallis nunc laoreet. Nullain convallis ris elis vest liberos nis diculis feugiat in rutrum. Suspendreristibulumfaucibulum lobortor quis tortortor ris sapien sce enim et volutpat sus. Urnaretiumorci orci fauctor leo justo nulla cras ridiculum&hellip;</p>
@@ -77,17 +77,17 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="homepage">
       <ul>
         <li>
-          <h2><img src="images/demo/60x60.gif" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
+          <h2><img src="images/demo/60x60.GIF" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
           <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat. Adipisciniapellentum leo ut consequam ris felit elit id nibh sociis malesuada.</p>
           <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
         </li>
         <li>
-          <h2><img src="images/demo/60x60.gif" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
+          <h2><img src="images/demo/60x60.GIF" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
           <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat. Adipisciniapellentum leo ut consequam ris felit elit id nibh sociis malesuada.</p>
           <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
         </li>
         <li class="last">
-          <h2><img src="images/demo/60x60.gif" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
+          <h2><img src="images/demo/60x60.GIF" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
           <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat. Adipisciniapellentum leo ut consequam ris felit elit id nibh sociis malesuada.</p>
           <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
         </li>
@@ -101,7 +101,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="footer">
     <div class="box1">
       <h2>A Little Company Information !</h2>
-      <img class="imgl" src="images/demo/imgl.gif" alt="" />
+      <img class="imgl" src="images/demo/imgl.GIF" alt="" />
       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anterdumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. Condimentumfelis et amet tellent quisquet a leo lacus nec augue</p>
       <p>Portortornec condimenterdum eget consectetuer condis.</p>
     </div>
@@ -122,8 +122,8 @@ Licence URI: http://www.os-templates.com/template-terms
       <h2>Latest Flickr Images !</h2>
       <div class="wrap">
         <div class="fix"></div>
-        <div class="flickr_badge_image" id="flickr_badge_image1"><a href="#"><img src="images/demo/80x80.gif" alt="" /></a></div>
-        <div class="flickr_badge_image" id="flickr_badge_image2"><a href="#"><img src="images/demo/80x80.gif" alt="" /></a></div>
+        <div class="flickr_badge_image" id="flickr_badge_image1"><a href="#"><img src="images/demo/80x80.GIF" alt="" /></a></div>
+        <div class="flickr_badge_image" id="flickr_badge_image2"><a href="#"><img src="images/demo/80x80.GIF" alt="" /></a></div>
         <div class="flickr_badge_image" id="flickr_badge_image3"><a href="#"><img src="images/demo/80x80.gif" alt="" /></a></div>
         <div class="flickr_badge_image" id="flickr_badge_image4"><a href="#"><img src="images/demo/80x80.gif" alt="" /></a></div>
         <div class="flickr_badge_image" id="flickr_badge_image5"><a href="#"><img src="images/demo/80x80.gif" alt="" /></a></div>
